# musiclibrary-ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_connection.py
app/: config.py  main.py
app/models/: __init__.py  requests.py  responses.py  song.py
app/prompts/: analyze_mood.py  describe_playlist.py  generate_name.py  recommend_songs.py  semantic_search.py
app/routers/: ai_routes.py
app/services/: ai_service.py  groq_service.py
app/utils/: exceptions.py  helpers.py  logger.py
